# Hedgehog

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  THEMES.md  build-win.bat  hedgehog.1  hedgehog.1.html  hedgehog.1.ronn  index.html  styles.css
.github/workflows/: build.yaml  ci.yaml  release.yaml
assets/: archive-install.sh  archive-uninstall.sh  rc  themes.toml
assets/themes/: default.theme  gruvbox.tera  gruvbox.toml  macros.tera  nord.tera  nord.toml  solarized.tera  solarized.toml
cmd-parser/: Cargo.toml
cmd-parser-derive/: Cargo.toml
cmd-parser-derive-tests/: Cargo.toml
cmd-parser-derive-tests/src/: lib.rs
cmd-parser-derive/src/: attrs.rs  lib.rs
cmd-parser/src/: lib.rs
hedgehog-library/: Cargo.toml
hedgehog-library/src/: actor.rs  cache.rs  collection.rs  datasource.rs  lib.rs  metadata.rs  model.rs  opml.rs  rss_client.rs  search.rs  search_query.rs  sqlite.rs  status_writer.rs  tests.rs
hedgehog-library/src/schema/: init.sql  v2.sql
hedgehog-library/src/test_data/: bedtime.xml  feed1_blocked_episode.xml  feed1_updates_episodes.xml  simple_feed.xml  with_feeds.opml
hedgehog-library/src/test_data/itunes/: success-with-no-feed.json  success.json
hedgehog-library/src/test_data/opml/: empty.opml  with-feeds.opml  with-invalid-nodes.opml
hedgehog-library/src/test_data/rss/: empty-feed.xml  feed1-updated-episodes.xml  feed1.xml
hedgehog-library/src/tests/: data.rs  mod.rs
hedgehog-player/: Cargo.toml
hedgehog-player/src/: gst_utils.rs  lib.rs  mpirs.rs  mpris.rs  state.rs  volume.rs
hedgehog-tui/: Cargo.toml  build.rs
hedgehog-tui/data/: default.theme  gruvbox-dark.theme  gruvbox-light.theme  nord.theme  rc  solarized-dark.theme  solarized-light.theme
hedgehog-tui/misc/: justfile
hedgehog-tui/misc/theme-templates/: gruvbox-dark.json  gruvbox-light.json  gruvbox.tera
hedgehog-tui/src/: cmdcontext.rs  cmdparser.rs  cmdreader.rs  command.rs  dataview.rs  environment.rs  events.rs  history.rs  keymap.rs  logger.rs  main.rs  mouse.rs  options.rs  paging.rs  screen.rs  status.rs  theming.rs  utils.rs  view_model.rs
hedgehog-tui/src/dataview/: interactive.rs  linear.rs  mod.rs  paginated.rs  version.rs
hedgehog-tui/src/scrolling/: mod.rs  pagination.rs  selection.rs  viewport.rs
hedgehog-tui/src/theming/: mod.rs  parser.rs  selectors.rs  style_parser.rs
hedgehog-tui/src/widgets/: animation.rs  command.rs  confirmation.rs  empty.rs  episode_row.rs  errors_log.rs  errors_log_row.rs  feed_row.rs  layout.rs  library.rs  library_rows.rs  list.rs  mod.rs  player_state.rs  progressbar.rs  search_results.rs  search_row.rs  status.rs  textentry.rs  utils.rs
misc/: justfile
misc/template_renderer/: pyproject.toml  renderer.py
misc/theme-templates/: gruvbox.tera
misc/themes/: gruvbox.jinja2  gruvbox.toml  header.jinja2  nord.jinja2  nord.toml  solarized.jinja2
