[package]
name = "hedgehog-library"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rss = "1.10"
thiserror = "1.0"
rusqlite = { version = "0.26", features = ["chrono"] }
directories = "4.0"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.2"

[[bin]]
name = "import-xml"
path = "bin/import_xml.rs"
