[package]
name = "hedgehog-library"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rss = "1.10"
thiserror = "1.0"
rusqlite = { version = "0.26", features = ["chrono"] }
actix = "0.12"
reqwest = "0.11"
tokio = { version = "1", features = ["sync"] }
cmdparse = { git = "ssh://git@github.com/poletaevvlad/cmdparse.git", branch = "main" }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
quick-xml = "0.22"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.2"
httpmock = "0.6"
