[package]
name = "hedgehog-library"
version = "0.2.0"
edition = "2018"
rust-version = "1.56.0"

[dependencies]
chrono = "0.4"
rss = "1.10"
thiserror = "1.0"
rusqlite = { version = "0.28", features = ["chrono"] }
actix = "0.12"
reqwest = "0.11"
tokio = { version = "1", features = ["sync"] }
cmdparse = "0.1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
quick-xml = "0.22"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.2"
httpmock = "0.6"
