[package]
name = "hedgehog-player"
version = "0.1.0"
edition = "2018"

[dependencies]
gstreamer-base = "0.17"
actix = "0.12"
cmdparse = { git = "ssh://git@github.com/poletaevvlad/cmdparse.git", branch = "main" }

# MPIRS
dbus= { git = "https://github.com/poletaevvlad/dbus-rs", branch = "async-prop-get-all-no-response", optional = true }
dbus-crossroads = { git = "https://github.com/poletaevvlad/dbus-rs", branch = "async-prop-get-all-no-response", optional = true }
dbus-tokio = { git = "https://github.com/poletaevvlad/dbus-rs", branch = "async-prop-get-all-no-response", optional = true }

[features]
mpris = ["dbus", "dbus-crossroads", "dbus-tokio"]
