[package]
name = "hedgehog-tui"
version = "0.1.0"
edition = "2021"
description = "A TUI podcasts player and organizer"

[[bin]]
name = "hedgehog"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
crossterm = { version = "0.20", features = ["event-stream"] }
tui = { version = "0.15", features = ["crossterm"], default-features = false }
actix = "0.12"
unicode-width = "0.1"
thiserror = "1.0"
hedgehog-library = { path = "../hedgehog-library" }
hedgehog-player = { path = "../hedgehog-player" }
cmd-parser = { path = "../cmd-parser" }
directories = "4.0"
clap = "~2.27.0"

[dev-dependencies]
tempfile = "3.2"
