[tool.poetry]
name = "template_renderer"
version = "0.1.0"
description = "The CLI utility for renering template created for miscelaneos files in the Hedgehog project"
authors = ["Vlad Poletaev <poletaev.vladislav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3.0.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
